# Registration

./: CGetPoint.h  CMakeCache.txt  CMakeLists.txt  GetPoint.h  LICENSE  Makefile  MeshBuilder.h  README.md  Registeration.cpp  Registeration.h  Tool.h  ToolMesh.h  cmake_install.cmake  eight_str.m  main.cpp
.github/workflows/: c-cpp.yml
CMakeScripts/: ReRunCMake.make
MeshLib/Geometry/: Point.h  Point2.H
MeshLib/Mesh/: Vertex.h  boundary.h
Model/: Nut.m  Nut_23.m  Nut_cp.m  Nut_lap.m  PearlRing.m  PearlRing_lap.m  eight_45.m  eight_56.m  eight_L2.m  eight_L3.m  eight_L4.m  eight_LAPm.m  eight_LL.m  eight_Lq.m  eight_Register.m  eight_lap.m  eight_osqp.m  eight_osqp_100_500.m  eight_osqp_50_100.m  eight_vector3.m  halfeight.m  iso_eight.m  output.m  output2.m  pignose.m  rect2circlehole.m  show.bat  sophie.m  squarewithcirclehole.m  starcup.m
Registeration.xcodeproj/: project.pbxproj
Registeration.xcodeproj/project.xcworkspace/xcuserdata/jingouyang.xcuserdatad/: UserInterfaceState.xcuserstate
Registeration.xcodeproj/xcuserdata/jingouyang.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
TMeshLib/Geometry/: Circle.h  Hyperbolic.H  HyperbolicCircle.h  Line2D.h  Plane.h  Point.h  Point2.H  quat.h
TMeshLib/Mesh/: basetmesh.h  edge.h  face.h  halfedge.h  halfface.h  tedge.h  tet.h  titerators.h  tvertex.h  vertex.h  标头1.h
TMeshLib/Parser/: parser.h
basic_example_TMesh/: TetTest.h  TetTestMesh.h  main.cpp
basic_opengl/: Arcball.h  main.cpp  viewer.h
freeglut/: freeglut.lib
spectra/1.0.1/: INSTALL_RECEIPT.json
spectra/1.0.1/.brew/: spectra.rb
viewer/: Point.h  Point2.H  quat.h  viewer.h
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ReRunCMake.make
xcode/Registeration.xcodeproj/: project.pbxproj
(+5 files in other folders)
